fix alignment of installation instructions

--- a/css/bootstrap/bootstrap-responsive.css
+++ b/css/bootstrap/bootstrap-responsive.css
@@ -97,7 +97,6 @@
 
 @media (min-width: 1200px) {
   .row {
-    margin-left: -30px;
     *zoom: 1;
   }
   .row:before,
