--- a/css/bootstrap/bootstrap.css
+++ b/css/bootstrap/bootstrap.css
@@ -263,7 +263,6 @@ a:hover {
 }
 
 .row {
-  margin-left: -20px;
   *zoom: 1;
 }
 
